--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.Chat">
         <activity
+                android:name=".ForgotActivity"
+                android:exported="true" />
+        <activity
                 android:name=".SignUpActivity"
                 android:exported="true" />
         <activity
