--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.Chat">
         <activity
+                android:name=".ProfileActivity"
+                android:exported="true" />
+        <activity
                 android:name=".ForgotActivity"
                 android:exported="true" />
         <activity
@@ -26,8 +29,7 @@
         </activity>
         <activity
                 android:name=".MainActivity"
-                android:exported="true">
-        </activity>
+                android:exported="true"></activity>
     </application>
 
 </manifest>
