--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,11 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Chat">
+            android:theme="@style/Theme.Base">
+        <activity
+                android:name=".MyChatActivity"
+                android:theme="@style/Theme.Chat"
+                android:exported="false" />
         <activity
                 android:name=".ProfileActivity"
                 android:exported="true" />
@@ -29,7 +33,7 @@
         </activity>
         <activity
                 android:name=".MainActivity"
-                android:exported="true"></activity>
+                android:exported="true" />
     </application>
 
 </manifest>
